APB-9557 GRS integration proof of concept

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,10 +16,25 @@ play.modules.enabled += "uk.gov.hmrc.agentregistrationfrontend.config.Module"
 
 microservice {
   services {
+    agent-registration-frontend {
+      external-url = "http://localhost:9001"
+    }
     contact-frontend {
       protocol = http
       host = localhost
       port = 9250
+    }
+    incorporated-entity-identification-frontend {
+      host = localhost
+      port = 9718
+    }
+    partnership-identification-frontend {
+      host = localhost
+      port = 9722
+    }
+    sole-trader-identification-frontend {
+      host = localhost
+      port = 9717
     }
   }
 }
