--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,8 +19,9 @@ play.http.router = prod.Routes
 
 play.filters.enabled += play.filters.csp.CSPFilter
 
-# Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
 # Custom error handler
 play.http.errorHandler = "uk.gov.hmrc.agentregistrationfrontend.config.ErrorHandler"
@@ -35,9 +36,12 @@ microservice {
       host = localhost
       port = 9250
     }
+    auth {
+      host = localhost
+      port = 8500
+    }
   }
 }
-
 
 urls {
   this-frontend = "http://localhost:22201"       # Default value
@@ -46,13 +50,12 @@ urls {
   feedback-frontend = "http://localhost:9514"    # Default value
   feedback-frontend = ${?platform.frontend.host} # Overrides default if set
 
-  bas-gateway-sign-in = http://localhost:9099/bas-gateway/sign-in
-  bas-gateway-sign-in = ${?platform.frontend.host}/bas-gateway/sign-in
-
-  bas-gateway-sign-out = http://localhost:9099/bas-gateway/bas-gateway/sign-out-without-state
-  bas-gateway-sign-out = ${?platform.frontend.host}/bas-gateway/bas-gateway/sign-out-without-state
-
+  bas-gateway-base-url = "http://localhost:9099"
+  bas-gateway-base-url = ${?platform.frontend.host}
+  bas-gateway-sign-in = ${urls.bas-gateway-base-url}"/bas-gateway/sign-in"
+  bas-gateway-sign-out = ${urls.bas-gateway-base-url}"/bas-gateway/bas-gateway/sign-out-without-state"
 }
+
 
 play.i18n.langCookieHttpOnly: "true"
 
@@ -70,4 +73,7 @@ play.i18n.langs = ["en"]
 #  gtm.container = "<INSERT YOUR GTM CONTAINER LETTER HERE>"
 #}
 
-
+mongodb {
+  uri = "mongodb://localhost:27017/agent-registration-frontend"
+  application-repo-ttl = 1 hour
+}
