[PP][APB-9560] repository setup (#2)
* APB-9560 - initial draft

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* cleanup

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* basic pages, landing, new application, application submitted

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* scala 3

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* cleanup

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* cleanup

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* more cleanup towards scala3

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* addressed requested changes in PR

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

---------

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,17 @@
+# Copyright 2025 HM Revenue & Customs
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 include "frontend.conf"
 
 appName = "agent-registration-frontend"
@@ -5,8 +19,9 @@ play.http.router = prod.Routes
 
 play.filters.enabled += play.filters.csp.CSPFilter
 
-# Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
 # Custom error handler
 play.http.errorHandler = "uk.gov.hmrc.agentregistrationfrontend.config.ErrorHandler"
@@ -21,8 +36,26 @@ microservice {
       host = localhost
       port = 9250
     }
+    auth {
+      host = localhost
+      port = 8500
+    }
   }
 }
+
+urls {
+  this-frontend = "http://localhost:22201"       # Default value
+  this-frontend = ${?platform.frontend.host}     # Overrides default if set
+
+  feedback-frontend = "http://localhost:9514"    # Default value
+  feedback-frontend = ${?platform.frontend.host} # Overrides default if set
+
+  bas-gateway-base-url = "http://localhost:9099"
+  bas-gateway-base-url = ${?platform.frontend.host}
+  bas-gateway-sign-in = ${urls.bas-gateway-base-url}"/bas-gateway/sign-in"
+  bas-gateway-sign-out = ${urls.bas-gateway-base-url}"/bas-gateway/bas-gateway/sign-out-without-state"
+}
+
 
 play.i18n.langCookieHttpOnly: "true"
 
@@ -40,4 +73,7 @@ play.i18n.langs = ["en"]
 #  gtm.container = "<INSERT YOUR GTM CONTAINER LETTER HERE>"
 #}
 
-
+mongodb {
+  uri = "mongodb://localhost:27017/agent-registration-frontend"
+  application-repo-ttl = 1 hour
+}
