APB-9637 business type page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,3 +77,7 @@ mongodb {
   uri = "mongodb://localhost:27017/agent-registration-frontend"
   application-repo-ttl = 1 hour
 }
+
+play-frontend-hmrc {
+  useRebrand = true
+}
