--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,7 @@ urls {
   bas-gateway-base-url = "http://localhost:9099"
   bas-gateway-base-url = ${?platform.frontend.host}
   bas-gateway-sign-in = ${urls.bas-gateway-base-url}"/bas-gateway/sign-in"
-  bas-gateway-sign-out = ${urls.bas-gateway-base-url}"/bas-gateway/bas-gateway/sign-out-without-state"
+  bas-gateway-sign-out = ${urls.bas-gateway-base-url}"/bas-gateway/sign-out-without-state"
 }
 
 
@@ -76,4 +76,8 @@ play.i18n.langs = ["en"]
 mongodb {
   uri = "mongodb://localhost:27017/agent-registration-frontend"
   application-repo-ttl = 1 hour
+}
+
+play-frontend-hmrc {
+  useRebrand = true
 }
