--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,6 +40,10 @@ microservice {
       host = localhost
       port = 8500
     }
+    enrolment-store-proxy {
+      host = localhost
+      port = 9595
+    }
   }
 }
 
@@ -54,6 +58,12 @@ urls {
   bas-gateway-base-url = ${?platform.frontend.host}
   bas-gateway-sign-in = ${urls.bas-gateway-base-url}"/bas-gateway/sign-in"
   bas-gateway-sign-out = ${urls.bas-gateway-base-url}"/bas-gateway/sign-out-without-state"
+
+  asa-fe-base-url = "http://localhost:9437"
+  asa-fe-dashboard-url = ${urls.asa-fe-base-url}"/agent-services-account/home"
+
+  taxAndSchemeManagementToSelfServeAssignmentOfAsaEnrolment = ${urls.this-frontend}"/taxAndSchemeManagementToSelfServeAssignmentOfAsaEnrolment" //TODO, ask Geoff
+
 }
 
 
@@ -77,9 +87,3 @@ mongodb {
   uri = "mongodb://localhost:27017/agent-registration-frontend"
   application-repo-ttl = 1 hour
 }
-
-play-frontend-hmrc {
-  useRebrand = true
-}
-
-contact-frontend.serviceId = "AgentRegistrationFrontend"
