APB-9646 - after we agreed on the requirements and implementation details
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,6 +43,11 @@ microservice {
     enrolment-store-proxy {
       host = localhost
       port = 9595
+      port = 7775
+    }
+    agent-registration {
+      host = localhost
+      port = 22202
     }
   }
 }
