APB-9646 Auth Action (#7)
* APB-9646- first attempt

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 - after we agreed on the requirements and implementation details

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 - formatting

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 - Enum helpers

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 - EnumFormatter and example Form

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 - synchronising model with backend and calling backends to find/upsert application

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 fixed test only routes

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 improved play hook

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 better readme

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

* APB-9646 create testOnly package

* APB-9646 use app slug in testonly

---------

Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>
Co-authored-by: Alistair Macdonald <1460971+nubz@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,14 +20,11 @@ play.http.router = prod.Routes
 play.filters.enabled += play.filters.csp.CSPFilter
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
-play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
+play.modules.enabled += "uk.gov.hmrc.agentregistrationfrontend.config.Module"
 
 # Custom error handler
 play.http.errorHandler = "uk.gov.hmrc.agentregistrationfrontend.config.ErrorHandler"
-
-# Play Modules
-play.modules.enabled += "uk.gov.hmrc.agentregistrationfrontend.config.Module"
 
 microservice {
   services {
@@ -39,6 +36,15 @@ microservice {
     auth {
       host = localhost
       port = 8500
+    }
+    enrolment-store-proxy {
+      host = localhost
+      port = 9595
+      port = 7775
+    }
+    agent-registration {
+      host = localhost
+      port = 22202
     }
   }
 }
@@ -54,6 +60,12 @@ urls {
   bas-gateway-base-url = ${?platform.frontend.host}
   bas-gateway-sign-in = ${urls.bas-gateway-base-url}"/bas-gateway/sign-in"
   bas-gateway-sign-out = ${urls.bas-gateway-base-url}"/bas-gateway/sign-out-without-state"
+
+  asa-fe-base-url = "http://localhost:9437"
+  asa-fe-dashboard-url = ${urls.asa-fe-base-url}"/agent-services-account/home"
+
+  taxAndSchemeManagementToSelfServeAssignmentOfAsaEnrolment = ${urls.this-frontend}"/taxAndSchemeManagementToSelfServeAssignmentOfAsaEnrolment" //TODO, ask Geoff
+
 }
 
 
@@ -72,14 +84,3 @@ play.i18n.langs = ["en"]
 #tracking-consent-frontend {
 #  gtm.container = "<INSERT YOUR GTM CONTAINER LETTER HERE>"
 #}
-
-mongodb {
-  uri = "mongodb://localhost:27017/agent-registration-frontend"
-  application-repo-ttl = 1 hour
-}
-
-play-frontend-hmrc {
-  useRebrand = true
-}
-
-contact-frontend.serviceId = "AgentRegistrationFrontend"
