--- a/conf/application.conf
+++ b/conf/application.conf
@@ -84,3 +84,9 @@ play.i18n.langs = ["en"]
 #tracking-consent-frontend {
 #  gtm.container = "<INSERT YOUR GTM CONTAINER LETTER HERE>"
 #}
+
+play-frontend-hmrc {
+  useRebrand = true
+}
+
+contact-frontend.serviceId = "AgentRegistrationFrontend"
