APB-9732 Adding GRS integration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,18 @@ microservice {
       host = localhost
       port = 22202
     }
+    sole-trader-identification-frontend {
+      host = localhost
+      port = 9717
+    }
+    incorporated-entity-identification-frontend {
+      host = localhost
+      port = 9718
+    }
+    partnership-identification-frontend {
+      host = localhost
+      port = 9722
+    }
   }
 }
 
@@ -68,6 +80,8 @@ urls {
 
 }
 
+contact-frontend.serviceId: "agent-registration"
+accessibility-statement.service-path = "/agent-registration"
 
 play.i18n.langCookieHttpOnly: "true"
 
