APB-9744 GRS stub and compilation warning cleanup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,7 +86,10 @@ accessibility-statement.service-path = "/agent-registration"
 play.i18n.langCookieHttpOnly: "true"
 
 # Change this value to true to enable Welsh translations to be loaded from messages.cy, and to display the language toggle
-features.welsh-language-support = false
+features {
+    welsh-language-support = false
+    grs-stub = true
+}
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
 # to enable Welsh translations for all content, including the standard headers and footers.
