APB-9752 file upload

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,6 +58,12 @@ microservice {
       host = localhost
       port = 9722
     }
+    upscan {
+      host = localhost
+      port = 9570
+      protocol = http
+      redirect-base = "http://localhost:22201"
+    }
   }
 }
 
@@ -107,3 +113,9 @@ play-frontend-hmrc {
 }
 
 contact-frontend.serviceId = "AgentRegistrationFrontend"
+
+uploads {
+  max-file-size-in-bytes = 5242880 # In bytes = 5MB
+  maximum-js-polls = 20
+  milliseconds-before-poll = 1000
+}
