APB-9754 use override for localhost config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,6 +63,7 @@ microservice {
       port = 9570
       protocol = http
       redirect-base = "http://localhost:22201"
+      redirect-base = ${?platform.frontend.host}
     }
   }
 }
