APB-9920 add self base url for stubbed connector call

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,10 @@ microservice {
       port = 9595
       port = 7775
     }
+    agent-registration-frontend {
+      host = localhost
+      port = 22201
+    }
     agent-registration {
       host = localhost
       port = 22202
