APB-10083 Companies House lookup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,6 +37,10 @@ microservice {
       host = localhost
       port = 8500
     }
+    companies-house-api-proxy {
+      host = localhost
+      port = 9991
+    }
     enrolment-store-proxy {
       host = localhost
       port = 9595
