APB-10141 Applicant email

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,14 @@ microservice {
       host = localhost
       port = 9991
     }
+    email-verification {
+      host = localhost
+      port = 9891
+    }
+    email-verification-frontend {
+      external-url = "http://localhost:9890"
+      external-url = ${?platform.frontend.host}
+    }
     enrolment-store-proxy {
       host = localhost
       port = 9595
@@ -98,7 +106,7 @@ urls {
 }
 
 contact-frontend.serviceId: "agent-registration"
-accessibility-statement.service-path = "/agent-registration"
+accessibility-statement.service-path = "/agent-services-account" // TODO: are we sharing ASA's statement?
 
 play.i18n.langCookieHttpOnly: "true"
 
