APB-10141 move email url config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,9 @@ urls {
   this-frontend = "http://localhost:22201"       # Default value
   this-frontend = ${?platform.frontend.host}     # Overrides default if set
 
+  email-verification-frontend = "http://localhost:9890"
+  email-verification-frontend = ${?platform.frontend.host}
+
   feedback-frontend = "http://localhost:9514"    # Default value
   feedback-frontend = ${?platform.frontend.host} # Overrides default if set
 
