--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,14 @@ microservice {
       host = localhost
       port = 9991
     }
+    email-verification {
+      host = localhost
+      port = 9891
+    }
+    email-verification-frontend {
+      external-url = "http://localhost:9890"
+      external-url = ${?platform.frontend.host}
+    }
     enrolment-store-proxy {
       host = localhost
       port = 9595
@@ -80,6 +88,9 @@ urls {
   this-frontend = "http://localhost:22201"       # Default value
   this-frontend = ${?platform.frontend.host}     # Overrides default if set
 
+  email-verification-frontend = "http://localhost:9890"
+  email-verification-frontend = ${?platform.frontend.host}
+
   feedback-frontend = "http://localhost:9514"    # Default value
   feedback-frontend = ${?platform.frontend.host} # Overrides default if set
 
@@ -98,7 +109,7 @@ urls {
 }
 
 contact-frontend.serviceId: "agent-registration"
-accessibility-statement.service-path = "/agent-registration"
+accessibility-statement.service-path = "/agent-services-account" // TODO: are we sharing ASA's statement?
 
 play.i18n.langCookieHttpOnly: "true"
 
