APB-10195 use default config for verified status on new emails

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -141,3 +141,5 @@ uploads {
   maximum-js-polls = 20
   milliseconds-before-poll = 1000
 }
+
+defaultEmailVerificationStatus = false // Set to true to default all new emails to verified (for staging tests only)
