APB-10195 change name of config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -142,4 +142,4 @@ uploads {
   milliseconds-before-poll = 1000
 }
 
-defaultEmailVerificationStatus = false // Set to true to default all new emails to verified (for staging tests only)
+ignoreEmailVerification = false // Set to true to default all new emails to verified (for staging tests only)
