APB-10184 Agent business name capture

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,6 +33,10 @@ microservice {
       host = localhost
       port = 9250
     }
+    agents-external-stubs {
+      host = localhost
+      port = 9009
+    }
     auth {
       host = localhost
       port = 8500
