[WG][APB-10158] Retrieve NINO and UTR upon sign-in - LLP - utr citizens and service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,6 +85,10 @@ microservice {
       redirect-base = "http://localhost:22201"
       redirect-base = ${?platform.frontend.host}
     }
+    citizen-details {
+      host = localhost
+      port = 9337
+    }
   }
 }
 
