APB-10186 switch to connector based config for ALF

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,6 +28,10 @@ play.http.errorHandler = "uk.gov.hmrc.agentregistrationfrontend.config.ErrorHand
 
 microservice {
   services {
+    address-lookup-frontend {
+      host = localhost
+      port = 9028
+    }
     agents-external-stubs {
       host = localhost
       port = 9009
@@ -95,9 +99,6 @@ microservice {
 urls {
   this-frontend = "http://localhost:22201"       # Default value
   this-frontend = ${?platform.frontend.host}     # Overrides default if set
-
-  address-lookup-frontend = "http://localhost:9028"
-  address-lookup-frontend = ${?platform.frontend.host}
 
   email-verification-frontend = "http://localhost:9890"
   email-verification-frontend = ${?platform.frontend.host}
