APB-10343 agree to Hmrc Standard for Agents

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -117,6 +117,7 @@ urls {
   taxAndSchemeManagementToSelfServeAssignmentOfAsaEnrolment = ${urls.this-frontend}"/taxAndSchemeManagementToSelfServeAssignmentOfAsaEnrolment" //TODO, ask Geoff
 
   govuk-start-page = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account" //TODO: need to confirm
+  govuk-hmrc-standard-for-agents = "https://www.gov.uk/government/publications/hmrc-the-standard-for-agents"
 
 }
 
