APB-10402 rework upscan submissions and sync from BE

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,7 @@ play.filters.enabled += play.filters.csp.CSPFilter
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.agentregistrationfrontend.config.Module"
+play.modules.enabled += "uk.gov.hmrc.objectstore.client.play.modules.ObjectStoreModule"
 
 # Custom error handler
 play.http.errorHandler = "uk.gov.hmrc.agentregistrationfrontend.config.ErrorHandler"
@@ -69,6 +70,10 @@ microservice {
       host = localhost
       port = 9595
       port = 7775
+    }
+    object-store {
+      host = localhost
+      port = 8464
     }
     sole-trader-identification-frontend {
       host = localhost
@@ -156,3 +161,9 @@ uploads {
 }
 
 ignoreEmailVerification = false // Set to true to default all new emails to verified (for staging tests only)
+
+# we use object store for upload storage and need an internal auth token to use for this
+# this token value is only for local development and can be initialised for object-store by running ./setup-object-store.sh
+# we may have a need to setup different permissions for this token if we integrate with other services requiring internal auth permissions
+internal-auth.token = "1234"
+object-store.default-retention-period = 6-months
