--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,12 +87,10 @@ microservice {
       host = localhost
       port = 9722
     }
-    upscan {
+    upscan-initiate {
       host = localhost
       port = 9570
       protocol = http
-      redirect-base = "http://localhost:22201"
-      redirect-base = ${?platform.frontend.host}
     }
     citizen-details {
       host = localhost
@@ -127,7 +125,7 @@ urls {
 }
 
 contact-frontend.serviceId: "agent-registration"
-accessibility-statement.service-path = "/agent-services-account" // TODO: are we sharing ASA's statement?
+accessibility-statement.service-path = "/agent-services-account" # TODO: are we sharing ASA's statement?
 
 play.i18n.langCookieHttpOnly: "true"
 
@@ -155,9 +153,9 @@ play-frontend-hmrc {
 contact-frontend.serviceId = "AgentRegistrationFrontend"
 
 uploads {
-  max-file-size-in-bytes = 5242880 # In bytes = 5MB
-  maximum-js-polls = 20
-  milliseconds-before-poll = 1000
+  max-file-size = 5MiB
+  check-upload-status-max-attempts = 20
+  check-upload-status-interval = 1000 millis
 }
 
 ignoreEmailVerification = false // Set to true to default all new emails to verified (for staging tests only)
