APB-10401 align mime types

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -156,6 +156,7 @@ uploads {
   max-file-size = 5MiB
   check-upload-status-max-attempts = 20
   check-upload-status-interval = 1000 millis
+  accept-mime-types = "image/jpeg,image/png,image/tiff,application/pdf,text/plain,application/vnd.ms-outlook,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.oasis.opendocument.text,application/vnd.oasis.opendocument.spreadsheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.oasis.opendocument.presentation"
 }
 
 ignoreEmailVerification = false // Set to true to default all new emails to verified (for staging tests only)
