--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -9,3 +9,7 @@ DisableSyntax.regex = [
     message = "Do not use the global 'routes' object directly. Use AppRoutes instead: uk.gov.hmrc.agentregistrationfrontend.controllers.AppRoutes"
   }
 ]
+
+
+DisableSyntax.noUniversalEquality = true
+DisableSyntax.noUniversalEqualityMessage = "Universal equality (==) or (!=) can introduce bugs. Please use equality (===) or (=!=) from SafeEquals instead."
