APB-10399 inject email verification passcode
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -159,7 +159,9 @@ uploads {
   accept-mime-types = "image/jpeg,image/png,image/tiff,application/pdf,text/plain,application/vnd.ms-outlook,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.oasis.opendocument.text,application/vnd.oasis.opendocument.spreadsheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.oasis.opendocument.presentation"
 }
 
-ignoreEmailVerification = false // Set to true to default all new emails to verified (for staging tests only)
+ignoreEmailVerification = false
+# this setting injects test-only email-verification-passcodes page before navigating to the email verification service. The injected page displays email verification codes
+inject-email-verification-passcodes-page = true
 
 # we use object store for upload storage and need an internal auth token to use for this
 # this token value is only for local development and can be initialised for object-store by running ./setup-object-store.sh
