APB-10399 lowercase package names as per scala convention
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -8,7 +8,13 @@ DisableSyntax.regex = [
     pattern = "uk\\.gov\\.hmrc\\.agentregistrationfrontend(\\..+)?\\.controllers(\\..+)?\\.routes"
     message = "Do not use the global 'routes' object directly. Use AppRoutes instead: uk.gov.hmrc.agentregistrationfrontend.controllers.AppRoutes"
   }
+  {
+    id = "UppercaseInPackage"
+    pattern = "package\\s+[a-z0-9_]*(\\.[a-z0-9_]*)*[A-Z]"
+    message = "Package names should be all lowercase as per Scala conventions"
+  }
 ]
+
 
 
 DisableSyntax.noUniversalEquality = true
