APB-10446 refined upscan, only production code
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -9,6 +9,11 @@ DisableSyntax.regex = [
     message = "Do not use the global 'routes' object directly. Use AppRoutes instead: uk.gov.hmrc.agentregistrationfrontend.controllers.AppRoutes"
   }
   {
+    id = "AppRoutes2"
+    pattern = "\\.routes"
+    message = "2 Do not use the global 'routes' object directly. Use AppRoutes instead: uk.gov.hmrc.agentregistrationfrontend.controllers.AppRoutes"
+  }
+  {
     id = "UppercaseInPackage"
     pattern = "package\\s+[a-z0-9_]*(\\.[a-z0-9_]*)*[A-Z]"
     message = "Package names should be all lowercase as per Scala conventions"
