--- a/conf/application.conf
+++ b/conf/application.conf
@@ -152,6 +152,11 @@ play-frontend-hmrc {
 
 contact-frontend.serviceId = "AgentRegistrationFrontend"
 
+mongodb {
+  uri = "mongodb://localhost:27017/agent-registration-frontend"
+  upload-repo-ttl = 1h
+}
+
 uploads {
   max-file-size = 5MiB
   check-upload-status-max-attempts = 20
