APB-10446 fixed tests
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,7 @@ play.filters.enabled += play.filters.csp.CSPFilter
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.agentregistrationfrontend.config.Module"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "uk.gov.hmrc.objectstore.client.play.modules.ObjectStoreModule"
 
 # Custom error handler
@@ -164,7 +165,6 @@ uploads {
   accept-mime-types = "image/jpeg,image/png,image/tiff,application/pdf,text/plain,application/vnd.ms-outlook,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.oasis.opendocument.text,application/vnd.oasis.opendocument.spreadsheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.oasis.opendocument.presentation"
 }
 
-ignoreEmailVerification = false
 # this setting injects test-only email-verification-passcodes page before navigating to the email verification service. The injected page displays email verification codes
 inject-email-verification-passcodes-page = true
 
