APB-10446 routes fixes
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -10,7 +10,7 @@ DisableSyntax.regex = [
   }
   {
     id = "AppRoutes2"
-    pattern = "\\.routes"
+    pattern = "routes\\..*Controller"
     message = "2 Do not use the global 'routes' object directly. Use AppRoutes instead: uk.gov.hmrc.agentregistrationfrontend.controllers.AppRoutes"
   }
   {
