APB-10497 sync from FE

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,6 +154,7 @@ play.i18n.langs = ["en"]
 
 play-frontend-hmrc {
   useRebrand = true
+  forceServiceNavigation = true
 }
 
 contact-frontend.serviceId = "AgentRegistrationFrontend"
