--- a/conf/application.conf
+++ b/conf/application.conf
@@ -170,6 +170,8 @@ uploads {
   accept-mime-types = "image/jpeg,image/png,image/tiff,application/pdf,text/plain,application/vnd.ms-outlook,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.oasis.opendocument.text,application/vnd.oasis.opendocument.spreadsheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.oasis.opendocument.presentation"
 }
 
+ignoreEmailVerification = false // Set to true to default all new emails to verified (for staging tests only)
+
 # this setting injects test-only email-verification-passcodes page before navigating to the email verification service. The injected page displays email verification codes
 inject-email-verification-passcodes-page = true
 
