--- a/conf/application.conf
+++ b/conf/application.conf
@@ -127,6 +127,8 @@ urls {
 
   govuk-start-page = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account" //TODO: need to confirm
   govuk-hmrc-standard-for-agents = "https://www.gov.uk/government/publications/hmrc-the-standard-for-agents"
+  
+  companies-house="https://beta.companieshouse.gov.uk/"
 
 }
 
