[WG][APB-10547] Entity checks - deceased check

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,7 @@ urls {
   govuk-hmrc-standard-for-agents = "https://www.gov.uk/government/publications/hmrc-the-standard-for-agents"
   
   companies-house="https://beta.companieshouse.gov.uk/"
+  contact-hmrc="https://www.gov.uk/contact-hmrc"
 
 }
 
