Sole trader journey enabled inc individual journey

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -185,3 +185,11 @@ inject-email-verification-passcodes-page = true
 # we may have a need to setup different permissions for this token if we integrate with other services requiring internal auth permissions
 internal-auth.token = "1234"
 object-store.default-retention-period = 6-months
+
+allowed-redirect-hosts = [
+  "localhost",
+  "www.gov.uk",
+  "www.qa.tax.service.gov.uk",
+  "www.staging.tax.service.gov.uk",
+  "www.tax.service.gov.uk"
+]
