APB-10863 handle removal of last record and update content
APB-10863 update content to latest

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -127,6 +127,7 @@ urls {
 
   govuk-start-page = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account" //TODO: need to confirm
   govuk-hmrc-standard-for-agents = "https://www.gov.uk/government/publications/hmrc-the-standard-for-agents"
+  govuk-guidance-on-relevant-tax-advisers = "https://www.gov.uk" // TODO: missing url
   
   companies-house="https://beta.companieshouse.gov.uk/"
   contact-hmrc="https://www.gov.uk/contact-hmrc"
