APB-10738 submit application for risking

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,10 @@ microservice {
       host = localhost
       port = 22202
     }
+    agent-registration-risking {
+      host = localhost
+      port = 22203
+    }
     auth {
       host = localhost
       port = 8500
